--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 # Normalize
 --------------------------------------------------------------*/
 html {
-	font-family: sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
 }
@@ -323,8 +323,8 @@ input,
 select,
 optgroup,
 textarea {
-	color: #404040;
-	font-family: sans-serif;
+	color: #222;
+	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 16px;
 	font-size: 1rem;
 	line-height: 1.5;
@@ -334,8 +334,16 @@ h1, h2, h3, h4, h5, h6 {
 	clear: both;
 }
 
+h1 {
+	font-size: 2.4em;
+	font-weight: 200;
+}
+
 p {
 	margin-bottom: 1.5em;
+	font-size: 1.125em;
+	font-weight: 400;
+	max-width: 73ch;
 }
 
 dfn, cite, em, i {
