--- a/style.css
+++ b/style.css
@@ -282,7 +282,6 @@ header.site-header {
 }
 
 h1.site-title {
-	font-size: 1.125em;
 	margin-left: 1.75em;
 }
 
@@ -300,12 +299,32 @@ nav.main-navigation {
 
 article.post {
 	grid-column: main;
-	margin: 0 auto;
+	margin: 0 auto 5em auto;
 }
 
 .wp-block-image.alignfull {
 	margin-left: calc(-50vw + 50%);
 	margin-right: calc( -50vw + 50%);
+}
+
+h2.entry-title {
+	margin-top: 0;
+}
+
+.entry-footer {
+	background: #fbfbfb;
+	margin-left: calc(-50vw + 50%);
+	margin-right: calc(-50vw + 50%);
+	padding-left: calc(50vw - 50%);
+	padding-top: 1em;
+	padding-bottom: 1.25em;
+	border-bottom: 1px solid #ddd;
+	padding-right: calc(50vw - 50%);
+}
+
+.entry-footer .cat-links {
+	display: block;
+	margin-bottom: .25em;
 }
 
 aside.widget-area {
@@ -321,7 +340,6 @@ footer.site-footer {
 
 .wrapper {
 	display: grid;
-	grid-gap: 20px;
 	grid-template-columns: [full-start gutter1-start] 1fr
 	                       [gutter1-end main-start] 4fr
 	                       [main-end gutter2-start] 1fr
@@ -351,6 +369,28 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
 	font-size: 2.4em;
 	font-weight: 200;
+}
+
+h1.site-title {
+	font-size: 1.125em;
+}
+
+h2.entry-title {
+	font-size: 2.4em;
+	font-weight: 200;
+	color: #333;
+}
+
+h2.entry-title a,
+h2.entry-title a:visited {
+	color: #333;
+	text-decoration: none;
+}
+
+h2.entry-title a:hover,
+h2.entry-title a:focus {
+	color: blue;
+	text-decoration: underline;
 }
 
 p {
@@ -402,6 +442,12 @@ mark, ins {
 
 big {
 	font-size: 125%;
+}
+
+.entry-footer {
+	font-size: 1em;
+	color: #333;
+	font-weight: 300;
 }
 
 /*--------------------------------------------------------------
