--- a/style.css
+++ b/style.css
@@ -460,6 +460,7 @@ footer.site-footer {
 		padding: 0 1em;
 	}
 
+	.entry-footer,
 	.single .entry-footer,
 	.single .post-navigation {
 		margin-left: -1em;
