Show each reaction section only if there is something to show
Checking for an empty array of reply comments specifically avoids
displaying every single comment on the site 🙃

--- a/css/style.css
+++ b/css/style.css
@@ -1337,6 +1337,7 @@ pre.wp-block-code code {
 }
 
 .comment-author,
+.p-bookmark,
 .p-mention,
 .p-like {
 	display: flex;
@@ -1345,6 +1346,7 @@ pre.wp-block-code code {
 }
 
 .comment-author img,
+.p-bookmark img,
 .p-mention img,
 .p-like img {
 	margin-right: .5em;
