--- a/css/style.css
+++ b/css/style.css
@@ -1353,14 +1353,14 @@ pre.wp-block-code code {
 	min-width: 40px;
 }
 
-.comment {
+.u-comment {
 	border-left: 2px solid #eee;
 	padding-left: 1em;
 	padding-bottom: 1em;
 	margin-top: 2em;
 }
 
-.comment > .comment {
+.u-comment > .u-comment {
 	margin-left: 0;
 	margin-top: 2em;
 	border-left: 1px solid #ccc;
