--- a/css/style.css
+++ b/css/style.css
@@ -1337,18 +1337,18 @@ pre.wp-block-code code {
 }
 
 .comment-author,
-.p-bookmark,
-.p-mention,
-.p-like {
+.u-bookmark,
+.u-mention,
+.u-like {
 	display: flex;
 	align-items: center;
 	margin-bottom: .5em;
 }
 
 .comment-author img,
-.p-bookmark img,
-.p-mention img,
-.p-like img {
+.u-bookmark img,
+.u-mention img,
+.u-like img {
 	margin-right: .5em;
 	min-width: 40px;
 }
