--- a/css/01-normalize.css
+++ b/css/01-normalize.css
@@ -1,286 +1,569 @@
 
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/*! sanitize.css v8.0.1 | CC0 1.0 Universal License | github.com/csstools/sanitize.css */
 
 /* Document
-   ========================================================================== */
+ * ========================================================================== */
 
 /**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
+ * Add border box sizing in all browsers (opinionated).
  */
 
-html {
-	line-height: 1.15; /* 1 */
-	-webkit-text-size-adjust: 100%; /* 2 */
-}
+ *,
+ ::before,
+ ::after {
+   box-sizing: border-box;
+ }
 
-/* Sections
-	 ========================================================================== */
+ /**
+  * 1. Add text decoration inheritance in all browsers (opinionated).
+  * 2. Add vertical alignment inheritance in all browsers (opinionated).
+  */
 
-/**
-   * Remove the margin in all browsers.
-   */
+ ::before,
+ ::after {
+   text-decoration: inherit; /* 1 */
+   vertical-align: inherit; /* 2 */
+ }
 
-body {
-	margin: 0;
-}
+ /**
+  * 1. Use the default cursor in all browsers (opinionated).
+  * 2. Change the line height in all browsers (opinionated).
+  * 3. Use a 4-space tab width in all browsers (opinionated).
+  * 4. Remove the grey highlight on links in iOS (opinionated).
+  * 5. Prevent adjustments of font size after orientation changes in
+  *    IE on Windows Phone and in iOS.
+  * 6. Breaks words to prevent overflow in all browsers (opinionated).
+  */
 
-/**
-   * Correct the font size and margin on `h1` elements within `section` and
-   * `article` contexts in Chrome, Firefox, and Safari.
-   */
+ html {
+   cursor: default; /* 1 */
+   line-height: 1.5; /* 2 */
+   -moz-tab-size: 4; /* 3 */
+   tab-size: 4; /* 3 */
+   -webkit-tap-highlight-color: transparent /* 4 */;
+   -ms-text-size-adjust: 100%; /* 5 */
+   -webkit-text-size-adjust: 100%; /* 5 */
+   word-break: break-word; /* 6 */
+ }
 
-h1 {
-	font-size: 2em;
-	margin: .67em 0;
-}
+ /* Sections
+  * ========================================================================== */
 
-/* Grouping content
-	 ========================================================================== */
+ /**
+  * Remove the margin in all browsers (opinionated).
+  */
 
-/**
-   * 1. Add the correct box sizing in Firefox.
-   * 2. Show the overflow in Edge and IE.
-   */
+ body {
+   margin: 0;
+ }
 
-hr {
-	box-sizing: content-box; /* 1 */
-	height: 0; /* 1 */
-	overflow: visible; /* 2 */
-}
+ /**
+  * Correct the font size and margin on `h1` elements within `section` and
+  * `article` contexts in Chrome, Edge, Firefox, and Safari.
+  */
 
-/**
-   * 1. Correct the inheritance and scaling of font size in all browsers.
-   * 2. Correct the odd `em` font sizing in all browsers.
-   */
+ h1 {
+   font-size: 2em;
+   margin: 0.67em 0;
+ }
 
-pre {
-	font-family: monospace, monospace; /* 1 */
-	font-size: 1em; /* 2 */
-}
+ /* Grouping content
+  * ========================================================================== */
 
-/* Text-level semantics
-	 ========================================================================== */
+ /**
+  * Remove the margin on nested lists in Chrome, Edge, IE, and Safari.
+  */
 
-/**
-   * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
-   */
+ dl dl,
+ dl ol,
+ dl ul,
+ ol dl,
+ ul dl {
+   margin: 0;
+ }
 
-abbr[title] {
-	text-decoration: underline; /* 2 */
-	text-decoration: underline dotted; /* 2 */
-}
+ /**
+  * Remove the margin on nested lists in Edge 18- and IE.
+  */
 
-/**
-   * Add the correct font weight in Chrome, Edge, and Safari.
-   */
+ ol ol,
+ ol ul,
+ ul ol,
+ ul ul {
+   margin: 0;
+ }
 
-b,
-strong {
-	font-weight: bolder;
-}
+ /**
+  * 1. Add the correct sizing in Firefox.
+  * 2. Show the overflow in Edge 18- and IE.
+  */
 
-/**
-   * 1. Correct the inheritance and scaling of font size in all browsers.
-   * 2. Correct the odd `em` font sizing in all browsers.
-   */
+ hr {
+   height: 0; /* 1 */
+   overflow: visible; /* 2 */
+ }
 
-code,
-kbd,
-samp {
-	font-family: monospace, monospace; /* 1 */
-	font-size: 1em; /* 2 */
-}
+ /**
+  * Add the correct display in IE.
+  */
 
-/**
-   * Add the correct font size in all browsers.
-   */
+ main {
+   display: block;
+ }
 
-small {
-	font-size: 80%;
-}
+ /**
+  * Remove the list style on navigation lists in all browsers (opinionated).
+  */
 
-/**
-   * Prevent `sub` and `sup` elements from affecting the line height in
-   * all browsers.
-   */
+ nav ol,
+ nav ul {
+   list-style: none;
+   padding: 0;
+ }
 
-sub,
-sup {
-	font-size: 75%;
-	line-height: 0;
-	position: relative;
-	vertical-align: baseline;
-}
+ /**
+  * 1. Correct the inheritance and scaling of font size in all browsers.
+  * 2. Correct the odd `em` font sizing in all browsers.
+  */
 
-sub {
-	bottom: -.25em;
-}
+ pre {
+   font-family: monospace, monospace; /* 1 */
+   font-size: 1em; /* 2 */
+ }
 
-sup {
-	top: -.5em;
-}
+ /* Text-level semantics
+  * ========================================================================== */
 
-/* Embedded content
-	 ========================================================================== */
+ /**
+  * Remove the gray background on active links in IE 10.
+  */
 
-/* Forms
-	 ========================================================================== */
+ a {
+   background-color: transparent;
+ }
 
-/**
-   * 1. Change the font styles in all browsers.
-   * 2. Remove the margin in Firefox and Safari.
-   */
+ /**
+  * Add the correct text decoration in Edge 18-, IE, and Safari.
+  */
 
-button,
-input,
-optgroup,
-select,
-textarea {
-	font-family: inherit; /* 1 */
-	font-size: 100%; /* 1 */
-	line-height: 1.15; /* 1 */
-	margin: 0; /* 2 */
-}
+ abbr[title] {
+   text-decoration: underline;
+   text-decoration: underline dotted;
+ }
 
-/**
-   * Show the overflow in IE.
-   * 1. Show the overflow in Edge.
-   */
+ /**
+  * Add the correct font weight in Chrome, Edge, and Safari.
+  */
 
-button,
-input { /* 1 */
-	overflow: visible;
-}
+ b,
+ strong {
+   font-weight: bolder;
+ }
 
-/**
-   * Remove the inheritance of text transform in Edge, Firefox, and IE.
-   * 1. Remove the inheritance of text transform in Firefox.
-   */
+ /**
+  * 1. Correct the inheritance and scaling of font size in all browsers.
+  * 2. Correct the odd `em` font sizing in all browsers.
+  */
 
-button,
-select { /* 1 */
-	text-transform: none;
-}
+ code,
+ kbd,
+ samp {
+   font-family: monospace, monospace; /* 1 */
+   font-size: 1em; /* 2 */
+ }
 
-/**
-   * Correct the inability to style clickable types in iOS and Safari.
-   */
+ /**
+  * Add the correct font size in all browsers.
+  */
 
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-	-webkit-appearance: button;
-}
+ small {
+   font-size: 80%;
+ }
 
-/**
-   * Remove the inner border and padding in Firefox.
-   */
+ /* Embedded content
+  * ========================================================================== */
 
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-	border-style: none;
-	padding: 0;
-}
+ /*
+  * Change the alignment on media elements in all browsers (opinionated).
+  */
 
-/**
-   * Restore the focus styles unset by the previous rule.
-   */
+ audio,
+ canvas,
+ iframe,
+ img,
+ svg,
+ video {
+   vertical-align: middle;
+ }
 
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-	outline: 1px dotted ButtonText;
-}
+ /**
+  * Add the correct display in IE 9-.
+  */
 
-/**
-   * Correct the padding in Firefox.
-   */
+ audio,
+ video {
+   display: inline-block;
+ }
 
-fieldset {
-	padding: .35em .75em .625em;
-}
+ /**
+  * Add the correct display in iOS 4-7.
+  */
 
-/**
-   * 1. Correct the text wrapping in Edge and IE.
-   * 2. Correct the color inheritance from `fieldset` elements in IE.
-   * 3. Remove the padding so developers are not caught out when they zero out
-   *    `fieldset` elements in all browsers.
-   */
+ audio:not([controls]) {
+   display: none;
+   height: 0;
+ }
 
-legend {
-	box-sizing: border-box; /* 1 */
-	color: inherit; /* 2 */
-	display: table; /* 1 */
-	max-width: 100%; /* 1 */
-	padding: 0; /* 3 */
-	white-space: normal; /* 1 */
-}
+ /**
+  * Remove the border on iframes in all browsers (opinionated).
+  */
 
-/**
-   * Add the correct vertical alignment in Chrome, Firefox, and Opera.
-   */
+ iframe {
+   border-style: none;
+ }
 
-progress {
-	vertical-align: baseline;
-}
+ /**
+  * Remove the border on images within links in IE 10-.
+  */
 
-/**
-   * Correct the cursor style of increment and decrement buttons in Chrome.
-   */
+ img {
+   border-style: none;
+ }
 
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-	height: auto;
-}
+ /**
+  * Change the fill color to match the text color in all browsers (opinionated).
+  */
 
-/**
-   * 1. Correct the odd appearance in Chrome and Safari.
-   * 2. Correct the outline style in Safari.
-   */
+ svg:not([fill]) {
+   fill: currentColor;
+ }
 
-[type="search"] {
-	-webkit-appearance: textfield; /* 1 */
-	outline-offset: -2px; /* 2 */
-}
+ /**
+  * Hide the overflow in IE.
+  */
 
-/**
-   * Remove the inner padding in Chrome and Safari on macOS.
-   */
+ svg:not(:root) {
+   overflow: hidden;
+ }
 
-[type="search"]::-webkit-search-decoration {
-	-webkit-appearance: none;
-}
+ /* Tabular data
+  * ========================================================================== */
 
-/**
-   * 1. Correct the inability to style clickable types in iOS and Safari.
-   * 2. Change font properties to `inherit` in Safari.
-   */
+ /**
+  * Collapse border spacing in all browsers (opinionated).
+  */
 
-::-webkit-file-upload-button {
-	-webkit-appearance: button; /* 1 */
-	font: inherit; /* 2 */
-}
+ table {
+   border-collapse: collapse;
+ }
 
-/* Interactive
-	 ========================================================================== */
+ /* Forms
+  * ========================================================================== */
 
-/*
-   * Add the correct display in Edge, IE 10+, and Firefox.
-   */
+ /**
+  * Remove the margin on controls in Safari.
+  */
 
-details {
-	display: block;
-}
+ button,
+ input,
+ select {
+   margin: 0;
+ }
 
-/*
-   * Add the correct display in all browsers.
-   */
+ /**
+  * 1. Show the overflow in IE.
+  * 2. Remove the inheritance of text transform in Edge 18-, Firefox, and IE.
+  */
 
-summary {
-	display: list-item;
-}
+ button {
+   overflow: visible; /* 1 */
+   text-transform: none; /* 2 */
+ }
+
+ /**
+  * Correct the inability to style buttons in iOS and Safari.
+  */
+
+ button,
+ [type="button"],
+ [type="reset"],
+ [type="submit"] {
+   -webkit-appearance: button;
+ }
+
+ /**
+  * 1. Change the inconsistent appearance in all browsers (opinionated).
+  * 2. Correct the padding in Firefox.
+  */
+
+ fieldset {
+   border: 1px solid #a0a0a0; /* 1 */
+   padding: 0.35em 0.75em 0.625em; /* 2 */
+ }
+
+ /**
+  * Show the overflow in Edge 18- and IE.
+  */
+
+ input {
+   overflow: visible;
+ }
+
+ /**
+  * 1. Correct the text wrapping in Edge 18- and IE.
+  * 2. Correct the color inheritance from `fieldset` elements in IE.
+  */
+
+ legend {
+   color: inherit; /* 2 */
+   display: table; /* 1 */
+   max-width: 100%; /* 1 */
+   white-space: normal; /* 1 */
+ }
+
+ /**
+  * 1. Add the correct display in Edge 18- and IE.
+  * 2. Add the correct vertical alignment in Chrome, Edge, and Firefox.
+  */
+
+ progress {
+   display: inline-block; /* 1 */
+   vertical-align: baseline; /* 2 */
+ }
+
+ /**
+  * Remove the inheritance of text transform in Firefox.
+  */
+
+ select {
+   text-transform: none;
+ }
+
+ /**
+  * 1. Remove the margin in Firefox and Safari.
+  * 2. Remove the default vertical scrollbar in IE.
+  * 3. Change the resize direction in all browsers (opinionated).
+  */
+
+ textarea {
+   margin: 0; /* 1 */
+   overflow: auto; /* 2 */
+   resize: vertical; /* 3 */
+ }
+
+ /**
+  * Remove the padding in IE 10-.
+  */
+
+ [type="checkbox"],
+ [type="radio"] {
+   padding: 0;
+ }
+
+ /**
+  * 1. Correct the odd appearance in Chrome, Edge, and Safari.
+  * 2. Correct the outline style in Safari.
+  */
+
+ [type="search"] {
+   -webkit-appearance: textfield; /* 1 */
+   outline-offset: -2px; /* 2 */
+ }
+
+ /**
+  * Correct the cursor style of increment and decrement buttons in Safari.
+  */
+
+ ::-webkit-inner-spin-button,
+ ::-webkit-outer-spin-button {
+   height: auto;
+ }
+
+ /**
+  * Correct the text style of placeholders in Chrome, Edge, and Safari.
+  */
+
+ ::-webkit-input-placeholder {
+   color: inherit;
+   opacity: 0.54;
+ }
+
+ /**
+  * Remove the inner padding in Chrome, Edge, and Safari on macOS.
+  */
+
+ ::-webkit-search-decoration {
+   -webkit-appearance: none;
+ }
+
+ /**
+  * 1. Correct the inability to style upload buttons in iOS and Safari.
+  * 2. Change font properties to `inherit` in Safari.
+  */
+
+ ::-webkit-file-upload-button {
+   -webkit-appearance: button; /* 1 */
+   font: inherit; /* 2 */
+ }
+
+ /**
+  * Remove the inner border and padding of focus outlines in Firefox.
+  */
+
+ ::-moz-focus-inner {
+   border-style: none;
+   padding: 0;
+ }
+
+ /**
+  * Restore the focus outline styles unset by the previous rule in Firefox.
+  */
+
+ :-moz-focusring {
+   outline: 1px dotted ButtonText;
+ }
+
+ /**
+  * Remove the additional :invalid styles in Firefox.
+  */
+
+ :-moz-ui-invalid {
+   box-shadow: none;
+ }
+
+ /* Interactive
+  * ========================================================================== */
+
+ /*
+  * Add the correct display in Edge 18- and IE.
+  */
+
+ details {
+   display: block;
+ }
+
+ /*
+  * Add the correct styles in Edge 18-, IE, and Safari.
+  */
+
+ dialog {
+   background-color: white;
+   border: solid;
+   color: black;
+   display: block;
+   height: -moz-fit-content;
+   height: -webkit-fit-content;
+   height: fit-content;
+   left: 0;
+   margin: auto;
+   padding: 1em;
+   position: absolute;
+   right: 0;
+   width: -moz-fit-content;
+   width: -webkit-fit-content;
+   width: fit-content;
+ }
+
+ dialog:not([open]) {
+   display: none;
+ }
+
+ /*
+  * Add the correct display in all browsers.
+  */
+
+ summary {
+   display: list-item;
+ }
+
+ /* Scripting
+  * ========================================================================== */
+
+ /**
+  * Add the correct display in IE 9-.
+  */
+
+ canvas {
+   display: inline-block;
+ }
+
+ /**
+  * Add the correct display in IE.
+  */
+
+ template {
+   display: none;
+ }
+
+ /* User interaction
+  * ========================================================================== */
+
+ /*
+  * 1. Remove the tapping delay in IE 10.
+  * 2. Remove the tapping delay on clickable elements
+	   in all browsers (opinionated).
+  */
+
+ a,
+ area,
+ button,
+ input,
+ label,
+ select,
+ summary,
+ textarea,
+ [tabindex] {
+   -ms-touch-action: manipulation; /* 1 */
+   touch-action: manipulation; /* 2 */
+ }
+
+ /**
+  * Add the correct display in IE 10-.
+  */
+
+ [hidden] {
+   display: none;
+ }
+
+ /* Accessibility
+  * ========================================================================== */
+
+ /**
+  * Change the cursor on busy elements in all browsers (opinionated).
+  */
+
+ [aria-busy="true"] {
+   cursor: progress;
+ }
+
+ /*
+  * Change the cursor on control elements in all browsers (opinionated).
+  */
+
+ [aria-controls] {
+   cursor: pointer;
+ }
+
+ /*
+  * Change the cursor on disabled, not-editable, or otherwise
+  * inoperable elements in all browsers (opinionated).
+  */
+
+ [aria-disabled="true"],
+ [disabled] {
+   cursor: not-allowed;
+ }
+
+ /*
+  * Change the display on visually hidden accessible elements
+  * in all browsers (opinionated).
+  */
+
+ [aria-hidden="false"][hidden] {
+   display: initial;
+ }
+
+ [aria-hidden="false"][hidden]:not(:focus) {
+   clip: rect(0, 0, 0, 0);
+   position: absolute;
+ }
