--- a/css/01-normalize.css
+++ b/css/01-normalize.css
@@ -1,23 +1,10 @@
 
 /*! sanitize.css v8.0.1 | CC0 1.0 Universal License | github.com/csstools/sanitize.css */
-
-/* Document
- * ========================================================================== */
-
-/**
- * Add border box sizing in all browsers (opinionated).
- */
-
 *,
 :before,
 :after {
 	box-sizing: border-box;
 }
-
-/**
-  * 1. Add text decoration inheritance in all browsers (opinionated).
-  * 2. Add vertical alignment inheritance in all browsers (opinionated).
-  */
 
 :before,
 :after {
@@ -46,13 +33,6 @@ html {
 	word-break: break-word; /* 6 */
 }
 
-/* Sections
-  * ========================================================================== */
-
-/**
-  * Remove the margin in all browsers (opinionated).
-  */
-
 body {
 	margin: 0;
 }
@@ -67,9 +47,6 @@ h1 {
 	margin: .67em 0;
 }
 
-/* Grouping content
-  * ========================================================================== */
-
 /**
   * Remove the margin on nested lists in Chrome, Edge, IE, and Safari.
   */
@@ -83,32 +60,11 @@ ul dl {
 }
 
 /**
-  * Remove the margin on nested lists in Edge 18- and IE.
-  */
-
-ol ol,
-ol ul,
-ul ol,
-ul ul {
-	margin: 0;
-}
-
-/**
   * 1. Add the correct sizing in Firefox.
-  * 2. Show the overflow in Edge 18- and IE.
   */
 
 hr {
 	height: 0; /* 1 */
-	overflow: visible; /* 2 */
-}
-
-/**
-  * Add the correct display in IE.
-  */
-
-main {
-	display: block;
 }
 
 /**
@@ -131,17 +87,6 @@ pre {
 	font-size: 1em; /* 2 */
 }
 
-/* Text-level semantics
-  * ========================================================================== */
-
-/**
-  * Remove the gray background on active links in IE 10.
-  */
-
-a {
-	background-color: transparent;
-}
-
 /**
   * Add the correct text decoration in Edge 18-, IE, and Safari.
   */
@@ -157,7 +102,7 @@ abbr[title] {
 
 b,
 strong {
-	font-weight: bolder;
+	font-weight: 700;
 }
 
 /**
@@ -179,9 +124,6 @@ samp {
 small {
 	font-size: 80%;
 }
-
-/* Embedded content
-  * ========================================================================== */
 
 /*
   * Change the alignment on media elements in all browsers (opinionated).
@@ -206,27 +148,10 @@ video {
 }
 
 /**
-  * Add the correct display in iOS 4-7.
-  */
-
-audio:not([controls]) {
-	display: none;
-	height: 0;
-}
-
-/**
   * Remove the border on iframes in all browsers (opinionated).
   */
 
 iframe {
-	border-style: none;
-}
-
-/**
-  * Remove the border on images within links in IE 10-.
-  */
-
-img {
 	border-style: none;
 }
 
@@ -239,26 +164,12 @@ svg:not([fill]) {
 }
 
 /**
-  * Hide the overflow in IE.
-  */
-
-svg:not(:root) {
-	overflow: hidden;
-}
-
-/* Tabular data
-  * ========================================================================== */
-
-/**
   * Collapse border spacing in all browsers (opinionated).
   */
 
 table {
 	border-collapse: collapse;
 }
-
-/* Forms
-  * ========================================================================== */
 
 /**
   * Remove the margin on controls in Safari.
@@ -302,26 +213,6 @@ fieldset {
 }
 
 /**
-  * Show the overflow in Edge 18- and IE.
-  */
-
-input {
-	overflow: visible;
-}
-
-/**
-  * 1. Correct the text wrapping in Edge 18- and IE.
-  * 2. Correct the color inheritance from `fieldset` elements in IE.
-  */
-
-legend {
-	color: inherit; /* 2 */
-	display: table; /* 1 */
-	max-width: 100%; /* 1 */
-	white-space: normal; /* 1 */
-}
-
-/**
   * 1. Add the correct display in Edge 18- and IE.
   * 2. Add the correct vertical alignment in Chrome, Edge, and Firefox.
   */
@@ -349,15 +240,6 @@ textarea {
 	margin: 0; /* 1 */
 	overflow: auto; /* 2 */
 	resize: vertical; /* 3 */
-}
-
-/**
-  * Remove the padding in IE 10-.
-  */
-
-[type="checkbox"],
-[type="radio"] {
-	padding: 0;
 }
 
 /**
@@ -431,25 +313,14 @@ textarea {
 	box-shadow: none;
 }
 
-/* Interactive
-  * ========================================================================== */
-
-/*
-  * Add the correct display in Edge 18- and IE.
-  */
-
-details {
-	display: block;
-}
-
 /*
   * Add the correct styles in Edge 18-, IE, and Safari.
   */
 
 dialog {
-	background-color: white;
+	background-color: #fff;
 	border: solid;
-	color: black;
+	color: #000;
 	display: block;
 	height: -moz-fit-content;
 	height: -webkit-fit-content;
@@ -476,30 +347,7 @@ summary {
 	display: list-item;
 }
 
-/* Scripting
-  * ========================================================================== */
-
-/**
-  * Add the correct display in IE 9-.
-  */
-
-canvas {
-	display: inline-block;
-}
-
-/**
-  * Add the correct display in IE.
-  */
-
-template {
-	display: none;
-}
-
-/* User interaction
-  * ========================================================================== */
-
 /*
-  * 1. Remove the tapping delay in IE 10.
   * 2. Remove the tapping delay on clickable elements
 	   in all browsers (opinionated).
   */
@@ -513,20 +361,8 @@ select,
 summary,
 textarea,
 [tabindex] {
-	-ms-touch-action: manipulation; /* 1 */
 	touch-action: manipulation; /* 2 */
 }
-
-/**
-  * Add the correct display in IE 10-.
-  */
-
-[hidden] {
-	display: none;
-}
-
-/* Accessibility
-  * ========================================================================== */
 
 /**
   * Change the cursor on busy elements in all browsers (opinionated).
