--- a/css/99-other-styles.css
+++ b/css/99-other-styles.css
@@ -263,11 +263,7 @@ a:active {
 	}
 }
 
-.site-main .comment-navigation,
-.site-main
-.posts-navigation,
-.site-main
-.post-navigation {
+.site-main .comment-navigation {
 	margin: 0 0 1.5em;
 	overflow: hidden;
 }
