--- a/css/00-banner.css
+++ b/css/00-banner.css
@@ -5,6 +5,7 @@ Author: Jeremy Felt
 Author URI: https://jeremyfelt.com
 Description: A theme to encourage more writing.
 Version: 1.1.1
+Template: twentytwentyone
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: writemore
