--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+/*!
+Theme Name: Write More Things
+Theme URI: http://github.com/jeremyfelt/writemore
+Author: Jeremy Felt
+Author URI: https://jeremyfelt.com
+Description: A theme to encourage more writing.
+Version: 1.1.1
+Template: twentytwentyone
+License: GNU General Public License v2 or later
+License URI: LICENSE
+Text Domain: writemore
+
+This theme, like WordPress, is licensed under the GPL.
+Use it to make something cool, have fun, and share what you've learned with others.
+
+Write More Things is based on Underscores https://underscores.me/, (C) 2012-2017 Automattic, Inc.
+Underscores is distributed under the terms of the GNU GPL v2 or later.
+
+Normalizing styles have been helped along thanks to the fine work of
+Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
+*/
 
 /*--------------------------------------------------------------
 ## Custom styles entered into Customizer at some point.
@@ -22,9 +43,7 @@
 .u-bookmark,
 .u-mention,
 .u-like {
-	display: -webkit-box;
 	display: flex;
-	-webkit-box-align: center;
 	align-items: center;
 	margin-bottom: .5em;
 }
@@ -58,7 +77,7 @@
 
 #webmention-form label {
 	font-size: var(--global--font-size-base);
-	font-weight: normal;
+	font-weight: 400;
 }
 
 #webmention-form p:first-of-type {
