--- a/css/imports/extra-junk.css
+++ b/css/imports/extra-junk.css
@@ -64,3 +64,10 @@
 #webmention-form p:first-of-type {
 	margin-bottom: var(--global--spacing-vertical);
 }
+
+.shortnotes-reply-to {
+	font-style: italic;
+	max-width: var(--responsive--aligndefault-width);
+	margin-left: auto;
+	margin-right: auto;
+}
