--- a/style.css
+++ b/style.css
@@ -54,3 +54,16 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	margin-left: auto;
 	margin-right: auto;
 }
+
+.archive-description {
+	font-size: var(--global--font-size-primary);
+}
+
+.archive-description p {
+	margin-bottom: var(--global--spacing-vertical);
+}
+
+.category .page-title {
+	font-size: calc(var(--global--font-size-xl) * 1.25);
+	font-weight: 600;
+}
