--- a/style.css
+++ b/style.css
@@ -67,3 +67,8 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	font-size: calc(var(--global--font-size-xl) * 1.25);
 	font-weight: 600;
 }
+
+.single .site-main > article > .entry-footer {
+	display: block;
+	margin-bottom: var(--global--spacing-vertical);
+}
