--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ Theme URI: http://github.com/jeremyfelt/writemore
 Author: Jeremy Felt
 Author URI: https://jeremyfelt.com
 Description: A theme to encourage more writing.
-Version: 2.0.0
+Version: 2.0.1
 Template: twentytwentyone
 License: GNU General Public License v2 or later
 License URI: LICENSE
@@ -20,4 +20,4 @@ Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
 
-@import 'imports/extra-junk.css';
+@import "imports/extra-junk.css";
