Remove an absolutely positioned facepile

--- a/style.css
+++ b/style.css
@@ -72,3 +72,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	display: block;
 	margin-bottom: var(--global--spacing-vertical);
 }
+
+.u-comment .p-author {
+	position: relative;
+}
