--- a/style.css
+++ b/style.css
@@ -18,11 +18,17 @@ you've learned with others.
 	--sans-serif: montserrat, sans-serif;
 }
 
+html,
+body {
+	height: 100%;
+}
+
 body {
 	font-family: montserrat, sans-serif;
 	font-family: var(--sans-serif);
-	line-height: 1.5;
+	line-height: 1.55;
 	font-size: 18px;
+	margin: 0;
 }
 
 header {
@@ -30,7 +36,12 @@ header {
 	margin: 0 auto;
 }
 
+main {
+	min-height: calc(100% - 375px);
+}
+
 main > header {
+	height: 175px;
 	text-align: right;
 }
 
@@ -38,12 +49,107 @@ article header {
 	position: relative;
 }
 
+article header a {
+	color: #333;
+}
+
+article header a:hover {
+	color: #00f;
+}
+
+article footer {
+	width: 640px;
+	margin: 3rem auto 0;
+}
+
+nav ul {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	list-style: none;
+	margin: 1rem 0 0;
+	padding: 0;
+}
+
+nav ul li {
+	padding: 0;
+	margin: 0 1rem 0 0;
+	font-weight: 700;
+}
+
+h2 {
+	font-size: 1.5rem;
+	margin-top: 3rem;
+	margin-bottom: 1rem;
+}
+
 img {
 	width: 100%;
 	height: auto;
 }
 
-.skip-link.screen-reader-text {
+input[type="search"] {
+	font-size: 1.5rem;
+	padding: 0.5rem;
+	font-weight: 300;
+	line-height: 1;
+}
+
+button {
+	padding: 0.875rem;
+	font-size: 1rem;
+	margin-left: 0.35rem;
+	vertical-align: top;
+	border: 1px solid #bbb;
+	background: #eee;
+	width: 100px;
+}
+
+button:hover {
+	background: #333;
+	color: #eee;
+}
+
+main ~ footer {
+	background: #333;
+	color: #fff;
+	height: 200px;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+}
+
+main ~ footer div {
+	margin-bottom: 1rem;
+}
+
+main ~ footer a {
+	color: #fff;
+}
+
+main ~ footer a:hover {
+	color: #ddd;
+}
+
+blockquote {
+	font-size: 0.95rem;
+	font-style: italic;
+	border-left: 4px solid #444;
+	padding-left: 1rem;
+}
+
+cite {
+	font-style: normal;
+	font-style: initial;
+	font-weight: 600;
+}
+
+time {
+	font-size: 0.9rem;
+}
+
+.screen-reader-text {
 	border: 0;
 	clip: rect(1px, 1px, 1px, 1px);
 	-webkit-clip-path: inset(50%);
@@ -75,42 +181,39 @@ img {
 	z-index: 100000;
 }
 
+.site-branding p:first-of-type {
+	margin-top: 0;
+}
+
+.weekly-preview {
+	list-style: none;
+	margin-bottom: 1.25rem;
+	padding-left: 0;
+	margin-left: -1rem;
+}
+
 .type-post {
 	position: relative;
 	padding-top: 0.5rem;
+}
+
+article.type-post {
 	margin-bottom: 5rem;
 }
 
-.type-post header::after,
-.type-post header::before {
-	content: "";
-	display: block;
-	position: absolute;
-	left: -2rem;
-	top: -1rem;
-	border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
-	border-left: 1px solid;
-	border-top: 1px solid;
-	border-image-slice: 1;
-	border-width: 2px;
-}
-
-.type-post header::after {
-	height: 250px;
-}
-
-.type-post header::before {
-	width: 320px;
+.multiple .type-like,
+.multiple .type-shortnote {
+	display: flex;
+	flex-direction: column;
 }
 
 .multiple .type-like,
+.multiple .type-shortnote,
 .single .type-shortnote .entry-content,
-.multiple .type-shortnote {
-	background: #fcfcff;
-	display: flex;
-	flex-direction: column;
+.single .type-like .entry-content {
+	background: #fefefe;
 	padding: 1rem 1.5rem;
-	border: 1px solid #ccc;
+	border: 1px solid #eee;
 	margin: 0 auto 2rem;
 	font-size: 1rem;
 	max-width: 640px;
@@ -118,12 +221,8 @@ img {
 
 .entry-content > * {
 	max-width: 640px;
-	margin: 0 auto 1rem auto;
-}
-
-.type-shortnote .entry-footer a {
-	font-size: 0.8rem;
-	text-align: right;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .has-text-align-center {
@@ -154,8 +253,26 @@ img {
 
 .author-bio img {
 	width: 150px;
+	height: 100%;
 }
 
 .author-bio-content {
 	padding: 0 1rem;
+	flex-basis: fit-content;
+}
+
+.author-bio-content p {
+	margin-top: 0;
+}
+
+.posts-navigation {
+	max-width: 640px;
+	margin: 3rem auto;
+	display: flex;
+	justify-content: space-between;
+	font-size: 1.35rem;
+}
+
+.shortnotes-reply-to {
+	font-style: italic;
 }
