--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ body {
 	margin: 0;
 }
 
-header {
+header,
+section {
 	max-width: 640px;
 	margin: 0 auto;
 }
@@ -275,4 +276,33 @@ article.type-post {
 
 .shortnotes-reply-to {
 	font-style: italic;
+}
+
+.reaction {
+	display: flex;
+}
+
+.reaction img {
+	width: 64px;
+}
+
+.reaction span {
+	padding-left: 1rem;
+	width: 100%;
+}
+
+.comment {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+}
+
+.comment img {
+	width: 64px;
+	margin-right: 1rem;
+}
+
+.reaction time,
+.comment time {
+	font-size: 1rem;
 }
