Update NPM dependencies

--- a/style.css
+++ b/style.css
@@ -151,6 +151,11 @@ time {
 }
 
 .screen-reader-text {
+	position: absolute !important;
+	word-wrap: normal !important;
+}
+
+.screen-reader-text {
 	border: 0;
 	clip: rect(1px, 1px, 1px, 1px);
 	-webkit-clip-path: inset(50%);
@@ -159,14 +164,15 @@ time {
 	margin: -1px;
 	overflow: hidden;
 	padding: 0;
-	position: absolute !important;
 	width: 1px;
-	word-wrap: normal !important;
+}
+
+.skip-link.screen-reader-text:focus {
+	clip: auto !important;
 }
 
 .skip-link.screen-reader-text:focus {
 	background-color: #eee;
-	clip: auto !important;
 	-webkit-clip-path: none;
 	        clip-path: none;
 	color: #444;
