Adjust shortnotes display on home page (for now)
This should share a template with the archive view at some point.

--- a/style.css
+++ b/style.css
@@ -225,6 +225,10 @@ article.type-post {
 	max-width: 640px;
 }
 
+.multiple .type-shortnote footer {
+	margin-top: 0;
+}
+
 .entry-content > * {
 	max-width: 640px;
 	margin-left: auto;
