--- a/css/imports/content.css
+++ b/css/imports/content.css
@@ -65,6 +65,10 @@ article.type-post {
 	max-width: 640px;
 }
 
+.multiple .type-shortnote footer {
+	margin-top: 0;
+}
+
 .entry-content > * {
 	max-width: 640px;
 	margin-left: auto;
