A few more mobile things

--- a/css/imports/content.css
+++ b/css/imports/content.css
@@ -45,6 +45,9 @@
 
 article.type-post {
 	margin-bottom: 5rem;
+	width: calc(100% - 2rem);
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .multiple .type-like,
