--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ body {
 	margin: 0;
 }
 
+header {
+	width: calc(100% - 2rem);
+}
+
 header,
 section {
 	max-width: 640px;
@@ -61,6 +65,11 @@ article header a:hover {
 article footer {
 	width: 640px;
 	margin: 3rem auto 0;
+	max-width: 100%;
+}
+
+footer > * {
+	max-width: 100%;
 }
 
 nav ul {
@@ -205,6 +214,9 @@ time {
 
 article.type-post {
 	margin-bottom: 5rem;
+	width: calc(100% - 2rem);
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .multiple .type-like,
