Tweak a few mobile layout things

--- a/css/imports/elements.css
+++ b/css/imports/elements.css
@@ -24,6 +24,19 @@ main {
 	min-height: calc(100% - 375px);
 }
 
+@media (max-width: 800px) {
+
+	main {
+		max-width: calc(100% - 2rem);
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	main article header {
+		width: 100%;
+	}
+}
+
 main > header {
 	height: 175px;
 	text-align: right;
