--- a/css/imports/content.css
+++ b/css/imports/content.css
@@ -50,6 +50,10 @@ article.type-post {
 	margin-right: auto;
 }
 
+.multiple article {
+	margin-bottom: 2rem;
+}
+
 .multiple .type-like,
 .multiple .type-shortnote {
 	display: flex;
@@ -70,7 +74,6 @@ article.type-post {
 
 .multiple .type-shortnote footer {
 	margin-top: 0;
-	max-width: 640px;
 }
 
 .entry-content > * {
