--- a/style.css
+++ b/style.css
@@ -258,6 +258,11 @@ article.type-post {
 	margin-top: 0;
 }
 
+ul.wp-block-latest-posts {
+	padding-left: 0;
+	list-style: none;
+}
+
 .entry-content > * {
 	max-width: 640px;
 	margin-left: auto;
