--- a/editor-style.css
+++ b/editor-style.css
@@ -1,10 +1,27 @@
+@font-face {
+	font-family: montserrat;
+	font-display: fallback;
+	font-weight: 300 400 700 900;
+	src: url(./fonts/Montserrat-VariableFont_wght.ttf) format("woff2");
+}
+
+@font-face {
+	font-family: montserrat;
+	font-display: fallback;
+	font-style: italic;
+	font-weight: 300 400 700 900;
+	src: url(./fonts/Montserrat-Italic-VariableFont_wght.ttf) format("woff2");
+}
+
 :root {
 	--sans-serif: montserrat, sans-serif;
 }
+
 html,
 body {
 	height: 100%;
 }
+
 body {
 	font-family: montserrat, sans-serif;
 	font-family: var(--sans-serif);
@@ -12,17 +29,21 @@ body {
 	font-size: 18px;
 	margin: 0;
 }
+
 header {
 	width: calc(100% - 2rem);
 }
+
 header,
 section {
 	max-width: 640px;
 	margin: 0 auto;
 }
+
 main {
 	min-height: calc(100% - 375px);
 }
+
 @media (max-width: 800px) {
 
 	main {
@@ -35,27 +56,34 @@ main {
 		width: 100%;
 	}
 }
+
 main > header {
 	height: 175px;
 	text-align: right;
 }
+
 article header {
 	position: relative;
 }
+
 article header a {
 	color: #333;
 }
+
 article header a:hover {
 	color: #00f;
 }
+
 article footer {
 	width: 640px;
 	margin: 3rem auto 0;
 	max-width: 100%;
 }
+
 footer > * {
 	max-width: 100%;
 }
+
 nav ul {
 	display: flex;
 	flex-wrap: wrap;
@@ -64,26 +92,31 @@ nav ul {
 	margin: 1rem 0 0;
 	padding: 0;
 }
+
 nav ul li {
 	padding: 0;
 	margin: 0 1rem 0 0;
 	font-weight: 700;
 }
+
 h2 {
 	font-size: 1.5rem;
 	margin-top: 3rem;
 	margin-bottom: 1rem;
 }
+
 img {
 	width: 100%;
 	height: auto;
 }
+
 input[type="search"] {
 	font-size: 1.5rem;
 	padding: 0.5rem;
 	font-weight: 300;
 	line-height: 1;
 }
+
 button {
 	padding: 0.875rem;
 	font-size: 1rem;
@@ -93,10 +126,12 @@ button {
 	background: #eee;
 	width: 100px;
 }
+
 button:hover {
 	background: #333;
 	color: #eee;
 }
+
 main ~ footer {
 	background: #333;
 	color: #fff;
@@ -106,33 +141,41 @@ main ~ footer {
 	flex-direction: column;
 	justify-content: flex-end;
 }
+
 main ~ footer div {
 	margin-bottom: 1rem;
 }
+
 main ~ footer a {
 	color: #fff;
 }
+
 main ~ footer a:hover {
 	color: #ddd;
 }
+
 blockquote {
 	font-size: 0.95rem;
 	font-style: italic;
 	border-left: 4px solid #444;
 	padding-left: 1rem;
 }
+
 cite {
 	font-style: normal;
 	font-style: initial;
 	font-weight: 600;
 }
+
 time {
 	font-size: 0.9rem;
 }
+
 .screen-reader-text {
 	position: absolute !important;
 	word-wrap: normal !important;
 }
+
 .screen-reader-text {
 	border: 0;
 	clip: rect(1px, 1px, 1px, 1px);
@@ -144,9 +187,11 @@ time {
 	padding: 0;
 	width: 1px;
 }
+
 .skip-link.screen-reader-text:focus {
 	clip: auto !important;
 }
+
 .skip-link.screen-reader-text:focus {
 	background-color: #eee;
 	-webkit-clip-path: none;
@@ -163,38 +208,46 @@ time {
 	width: auto;
 	z-index: 100000;
 }
+
 .site-branding p:first-of-type:first-child {
 	font-size: 2.25rem;
 	font-weight: 700;
 	margin-top: 1.525rem;
 	margin-bottom: 1.475rem;
 }
+
 .weekly-preview {
 	list-style: none;
 	margin-bottom: 1.25rem;
 	padding-left: 0;
 }
+
 .type-post {
 	position: relative;
 	padding-top: 0.5rem;
 }
+
 article.type-post {
 	margin-bottom: 5rem;
 	width: calc(100% - 2rem);
 	margin-left: auto;
 	margin-right: auto;
 }
+
 .multiple article {
 	margin-bottom: 2rem;
 }
+
 .multiple .type-like,
 .multiple .type-shortnote {
 	display: flex;
 	flex-direction: column;
 }
+
 .single .type-shortnote {
 	margin-top: 4rem;
 }
+
 .multiple .type-like,
 .multiple .type-shortnote,
 .single .type-shortnote .entry-content,
@@ -206,59 +259,73 @@ article.type-post {
 	font-size: 1rem;
 	max-width: 640px;
 }
+
 .multiple .has-image {
 	border: 0;
 	padding: 0;
 }
+
 .multiple .has-image figure {
 	width: 100vw;
 	margin-left: -1rem;
 	margin-bottom: 1rem;
 }
+
 .multiple .type-shortnote footer {
 	margin-top: 0;
 }
+
 ul.wp-block-latest-posts {
 	padding-left: 0;
 	list-style: none;
 }
+
 .entry-content > * {
 	max-width: 640px;
 	margin-left: auto;
 	margin-right: auto;
 }
+
 .has-text-align-center {
 	text-align: center;
 }
+
 .entry-content > figure {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 }
+
 .entry-content .size-large {
 	max-width: 1024px;
 	height: auto;
 }
+
 .entry-content figure {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 }
+
 .author-bio {
 	display: flex;
 	width: 640px;
 	margin: 1rem auto 0 auto;
 	justify-content: space-evenly;
 }
+
 .author-bio img {
 	width: 150px;
 	height: 100%;
 }
+
 .author-bio-content {
 	padding: 0 1rem;
 	flex-basis: fit-content;
 }
+
 .author-bio-content p {
 	margin-top: 0;
 }
+
 .posts-navigation {
 	max-width: 640px;
 	margin: 3rem auto;
@@ -266,28 +333,35 @@ ul.wp-block-latest-posts {
 	justify-content: space-between;
 	font-size: 1.35rem;
 }
+
 .shortnotes-reply-to {
 	font-style: italic;
 }
+
 .reaction {
 	display: flex;
 }
+
 .reaction img {
 	width: 64px;
 }
+
 .reaction span {
 	padding-left: 1rem;
 	width: 100%;
 }
+
 .comment {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
 }
+
 .comment img {
 	width: 64px;
 	margin-right: 1rem;
 }
+
 .reaction time,
 .comment time {
 	font-size: 1rem;
