--- a/style.css
+++ b/style.css
@@ -14,6 +14,21 @@ Use it to make something cool, have fun, and share what
 you've learned with others.
 */
 
+@font-face {
+	font-family: montserrat;
+	font-display: fallback;
+	font-weight: 300 400 700 900;
+	src: url(./fonts/Montserrat-VariableFont_wght.ttf) format("woff2");
+}
+
+@font-face {
+	font-family: montserrat;
+	font-display: fallback;
+	font-style: italic;
+	font-weight: 300 400 700 900;
+	src: url(./fonts/Montserrat-Italic-VariableFont_wght.ttf) format("woff2");
+}
+
 :root {
 	--sans-serif: montserrat, sans-serif;
 }
