Adjust how notes are displayed

--- a/css/imports/content.css
+++ b/css/imports/content.css
@@ -54,11 +54,10 @@ article.type-post {
 }
 
 .multiple article {
-	margin-bottom: 2rem;
+	margin-bottom: 4rem;
 }
 
-.multiple .type-like,
-.multiple .type-shortnote {
+.multiple .type-like {
 	display: flex;
 	flex-direction: column;
 }
@@ -68,8 +67,7 @@ article.type-post {
 }
 
 .multiple .type-like,
-.multiple .type-shortnote,
-.single .type-shortnote .entry-content,
+.type-shortnote .entry-content,
 .single .type-like .entry-content {
 	background: #fefefe;
 	padding: 0.75rem;
@@ -84,10 +82,14 @@ article.type-post {
 	padding: 0;
 }
 
+.multiple .has-image .entry-content {
+	max-width: 900px;
+	border: 0;
+}
+
 .multiple .has-image figure {
-	width: 100vw;
-	margin-left: -1rem;
-	margin-bottom: 1rem;
+	width: 100%;
+	margin-top: 0;
 }
 
 .multiple .type-shortnote footer {
@@ -174,9 +176,6 @@ ul.wp-block-latest-posts {
 
 .shortnotes-reply-to {
 	font-style: italic;
-}
-
-.single .shortnotes-reply-to {
 	max-width: 640px;
 	margin: 0 auto 1rem;
 	font-weight: 500;
