--- a/editor-style.css
+++ b/editor-style.css
@@ -62,6 +62,12 @@ main > header {
 	text-align: right;
 }
 
+article > * {
+	max-width: 640px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 article header {
 	position: relative;
 }
@@ -264,6 +270,10 @@ article.type-post {
 	margin: 0 auto 2rem;
 	font-size: 1rem;
 	max-width: 640px;
+}
+
+section.wp-block-latest-posts {
+	max-width: 100%;
 }
 
 .multiple .has-image {
