--- a/css/imports/elements.css
+++ b/css/imports/elements.css
@@ -42,6 +42,12 @@ main > header {
 	text-align: right;
 }
 
+article > * {
+	max-width: 640px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 article header {
 	position: relative;
 }
